--- a/netserver/netserver.csproj
+++ b/netserver/netserver.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Apache.Arrow" Version="18.1.0" />
     <PackageReference Include="Parquet.Net" Version="5.0.2" />
   </ItemGroup>
 
